<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/application_name_text_view"
        style="@style/AppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="140dp"
        android:text="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/avatar_image_view"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/application_name_text_view"
        app:srcCompat="@drawable/avatar_dog" />

    <EditText
        android:id="@+id/user_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:hint="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avatar_image_view"
        android:drawableRight="@drawable/profile"
        android:maxLength="15"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/create_new_account_button"
        style="@style/ButtonGreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="24dp"
        android:text="@string/create_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_name_edit_text" />


    <TextView
        android:id="@+id/create_account_text_view"
        android:textStyle="bold"
        android:textColor="?android:textColorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:text="@string/create_account_min"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/on_back_pressed_arrow"
        app:layout_constraintStart_toEndOf="@+id/on_back_pressed_arrow"
        app:layout_constraintTop_toTopOf="@+id/on_back_pressed_arrow" />

    <ImageView
        android:id="@+id/on_back_pressed_arrow"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/left_arrow"
        app:tint="?android:textColorPrimary" />

    <FrameLayout
        android:id="@+id/fragment_container_view_social"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
    </FrameLayout>

    <ImageView
        android:id="@+id/avatar_renew_icon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="48dp"
        app:layout_constraintStart_toStartOf="@+id/avatar_image_view"
        app:layout_constraintTop_toTopOf="@+id/avatar_image_view"
        app:srcCompat="@drawable/renew_fill"
        app:tint="?android:textColorPrimary" />

</androidx.constraintlayout.widget.ConstraintLayout>